--- a/.github/workflows/grade.yml
+++ b/.github/workflows/grade.yml
@@ -39,6 +39,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: submission
+
+      - name: Install Python
+        uses: actions/setup-python@v4
+        with:
+            python-version: '3.10'
+            cache: 'pip'
+            
+      - name: Install dependencies
+        run: pip install -r requirements.txt    
+        
       - name: Collect Submission and Run Grader
         uses: pawtograder/assignment-action@v3 # Update version here
         with:
